--- a/ex3/modal.css
+++ b/ex3/modal.css
@@ -19,12 +19,18 @@
 .modal-content {
   top: 50%;
   left: 50%;
-  width: 250px;
+  width: 475px;
   height: 250px;
   background: white;
   position: absolute;
   transform: translate(-50%, -50%);
   padding: 25px;
+}
+
+@media screen and (max-width: 500px) {
+  .modal-content {
+    width: 90%;
+  }
 }
 
 .modal-btn-close::after {
